--- a/src/ProductsList.css
+++ b/src/ProductsList.css
@@ -1,2 +1,34 @@
 .products {
+  background: #f1f1f1;
+  height: 100%;
+  padding: 25px;
+}
+
+.products-item {
+  background: white;
+  border: 1px solid #cacaca;
+  border-radius:5px;
+  margin-left: 15px;
+}
+
+.products-item:first-child {
+  margin-left: 0;
+}
+
+.products-item-enter {
+  opacity: 0.01;
+}
+
+.products-item-enter.products-item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.products-item-leave {
+  opacity: 1;
+}
+
+.products-item-leave.products-item-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
 }
