--- a/src/components/ProductsList.css
+++ b/src/components/ProductsList.css
@@ -1,8 +1,17 @@
+h2 {
+  font-size: 16px;
+}
+
 .products-item {
-  background: white;
-  border: 1px solid #cacaca;
-  border-radius:5px;
   margin-left: 15px;
+}
+
+.product-row {
+  margin-top: 15px;
+}
+
+.product-row:first-child {
+  margin-top: 0;
 }
 
 .products-item:first-child {
