--- a/src/components/ProductsList.css
+++ b/src/components/ProductsList.css
@@ -35,3 +35,12 @@ h2 {
   opacity: 0.01;
   transition: opacity 300ms ease-in;
 }
+
+.example-appear {
+  opacity: 0.01;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
